--- a/style.css
+++ b/style.css
@@ -36,13 +36,22 @@
 
 }
 
-.head-data p {
+.head-data p,
+a {
     font-family: 'Roboto', sans-serif;
 
 }
 
 .fa-circle-arrow-right {
     color: white;
+    /* -------------media quaries-------- */
+    /* ------------mobile devices---------- */
+}
+
+@media only screen (max-width:688px) {
+    .head-img {
+        backgrond-color: red;
+    }
 }
 
 /* -----------head section end---  */
@@ -117,6 +126,10 @@ h3 {
     margin-left: 15px;
 }
 
+.img-info a button {
+    margin-top: 10px;
+}
+
 .timing .chat a {
     margin-right: 70px;
 }
@@ -126,4 +139,53 @@ h3 {
     color: rgb(77, 4, 126);
     margin-bottom: 10px;
     margin-right: 40px;
+}
+
+/* -----------section2 end---- */
+footer {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100%;
+    background-color: rgb(31, 29, 29);
+    margin: 20px 0;
+}
+
+.footer-info {
+
+    padding-top: 100px;
+}
+
+.footer-info h1 {
+    font-size: 40px;
+    color: white;
+    padding-bottom: 20px;
+    text-align: center;
+
+}
+
+.footer-info hr {
+    width: 80%;
+}
+
+.footer-hr hr {
+    color: #535353;
+    opacity: 40%;
+}
+
+.footer-info-menu {
+    padding-bottom: 100px;
+    padding-top: 20px;
+    text-align: center;
+}
+
+.footer-info-menu .pointer:hover {
+    cursor: pointer;
+    font-size: 18px;
+}
+
+
+
+.footer-info-menu a {
+    color: white;
+    text-decoration: none;
+    margin: 10px;
 }
