--- a/style.css
+++ b/style.css
@@ -27,8 +27,8 @@
     margin-left: 100px;
 }
 
-.heading-img .head-img {
-    margin-left: 120px;
+.heading-img .head-img img {
+    margin: 0% auto;
 }
 
 .head-data a {
@@ -53,144 +53,205 @@ a {
     /* ------------mobile devices---------- */
 }
 
-@media only screen (max-width:688px) {
-    .head-img {
-        backgrond-color: red;
+@media only screen and (max-width:688px) {
+    .head {
+        width: 100%;
     }
-}
 
-/* -----------head section end---  */
-.upcoming {
-    height: 240px;
-    width: auto;
-    text-align: center;
-    padding: 20px;
-    background-color:
-        #161616;
-    margin-left: 5%;
-    border-radius: 20px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    .head .heading-img {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
 
-}
+    .heading-img .head-data {
+        margin: 0 4%;
+    }
 
-.upcoming1 h4 {
-    color: black;
-    background-color: white;
-    margin: 30px;
-    padding: 10px;
-    border-radius: 10px;
+    .head-data a {
+        margin-top: 30%;
+        margin-left: 30%;
+    }
 
-}
+    .head-data p {
+        text-align: center;
+        margin-bottom: 10%;
+    }
 
-.upcoming1 p {
-    color: black;
-    background-color: rgb(252, 5, 5);
-    margin: 30px;
-    padding: 10px;
-    border-radius: 10px;
-}
+    .head-data h1 {
+        text-align: center;
+    }
 
-.section2 {
-    margin-top: 5%;
-}
+    .heading-img .head-img img {
+        width: 95%;
+        margin-top: 10%;
+        margin-left: 3%;
 
-.head2 {
-    display: flex;
-    justify-content: space-between;
+    }
 
-}
-
-.timing {
-    display: flex;
-    justify-content: space-around;
-}
-
-.time a {
-    text-align: left;
-}
-
-.img-info-head {
-    display: grid;
-    grid-template-columns: repeat(3, 3fr);
-    gap: 20px;
-    margin-right: 5%;
-
-}
-
-.img-info {
-    border: 1px solid rgb(219, 219, 219);
-    border-radius: 10px;
-}
-
-.img-info h3 {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-.img-info button,
-h3 {
-    margin-left: 15px;
-}
-
-.img-info a button {
-    margin-top: 10px;
-}
-
-.timing .chat a {
-    margin-right: 70px;
-}
-
-.timing,
-.time .chat {
-    color: rgb(77, 4, 126);
-    margin-bottom: 10px;
-    margin-right: 40px;
-}
-
-/* -----------section2 end---- */
-footer {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    width: 100%;
-    background-color: rgb(31, 29, 29);
-    margin: 20px 0;
-}
-
-.footer-info {
-
-    padding-top: 100px;
-}
-
-.footer-info h1 {
-    font-size: 40px;
-    color: white;
-    padding-bottom: 20px;
-    text-align: center;
-
-}
-
-.footer-info hr {
-    width: 80%;
-}
-
-.footer-hr hr {
-    color: #535353;
-    opacity: 40%;
-}
-
-.footer-info-menu {
-    padding-bottom: 100px;
-    padding-top: 20px;
-    text-align: center;
-}
-
-.footer-info-menu .pointer:hover {
-    cursor: pointer;
-    font-size: 18px;
-}
+    .section2 {
+        display: none;
+    }
 
 
 
-.footer-info-menu a {
-    color: white;
-    text-decoration: none;
-    margin: 10px;
-}
+
+
+
+
+
+    /* -----------head section end---  */
+    .upcoming {
+
+        height: 240px;
+        width: auto;
+        text-align: center;
+        padding: 20px;
+        background-color:
+            #161616;
+        margin-left: 5%;
+        border-radius: 20px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+    }
+
+    .upcoming .upcoming1 a h4 {
+        color: black;
+        margin: 30px;
+        padding: 10px;
+        border-radius: 10px;
+    }
+
+    .upcoming .upcoming1 a {
+
+        text-decoration: none;
+    }
+
+    .upcoming .upcoming1 a h4:hover {
+        cursor: pointer;
+        font-size: 20px;
+        color: rgb(5, 5, 5);
+        background-color: white;
+
+    }
+
+    .upcoming .upcoming1 a h4 {
+        color: black;
+        background-color: rgb(252, 5, 5);
+        margin: 30px;
+        padding: 10px;
+        border-radius: 10px;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .section2 {
+        margin-top: 5%;
+    }
+
+    .head2 {
+        display: flex;
+        justify-content: space-between;
+
+    }
+
+    .timing {
+        display: flex;
+        justify-content: space-around;
+    }
+
+    .time a {
+        text-align: left;
+    }
+
+    .img-info-head {
+        display: grid;
+        grid-template-columns: repeat(3, 3fr);
+        gap: 20px;
+        margin-right: 5%;
+
+    }
+
+    .img-info {
+        border: 1px solid rgb(219, 219, 219);
+        border-radius: 10px;
+    }
+
+    .img-info h3 {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+
+    .img-info button,
+    h3 {
+        margin-left: 15px;
+    }
+
+    .img-info a button {
+        margin-top: 10px;
+    }
+
+    .img-info a button:hover {
+        cursor: pointer;
+        font-size: 15px;
+        font-weight: 10px;
+
+    }
+
+    .timing .chat a {
+        margin-right: 70px;
+    }
+
+    .timing,
+    .time .chat {
+        color: rgb(77, 4, 126);
+        margin-bottom: 10px;
+        margin-right: 40px;
+    }
+
+    /* -----------section2 end---- */
+    footer {
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        width: 100%;
+        background-color: rgb(31, 29, 29);
+        margin: 20px 0;
+    }
+
+    .footer-info {
+
+        padding-top: 100px;
+    }
+
+    .footer-info h1 {
+        font-size: 40px;
+        color: white;
+        padding-bottom: 20px;
+        text-align: center;
+
+    }
+
+    .footer-info hr {
+        width: 80%;
+    }
+
+    .footer-hr hr {
+        color: #535353;
+        opacity: 40%;
+    }
+
+    .footer-info-menu {
+        padding-bottom: 100px;
+        padding-top: 20px;
+        text-align: center;
+    }
+
+    .footer-info-menu .pointer:hover {
+        cursor: pointer;
+        font-size: 18px;
+        color: aqua;
+    }
+
+
+
+    .footer-info-menu a {
+        color: white;
+        text-decoration: none;
+        margin: 10px;
+    }
