--- a/style.css
+++ b/style.css
@@ -54,10 +54,6 @@ a {
 }
 
 @media only screen and (max-width:688px) {
-    .head {
-        width: 100%;
-    }
-
     .head .heading-img {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -87,171 +83,214 @@ a {
         margin-left: 3%;
 
     }
+}
 
-    .section2 {
-        display: none;
-    }
+/* -----------head section end---  */
+.upcoming {
 
+    height: 240px;
+    width: auto;
+    text-align: center;
+    padding: 20px;
+    background-color:
+        #161616;
+    margin-left: 5%;
+    border-radius: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+}
 
+.upcoming .upcoming1 a h4 {
+    color: black;
+    margin: 30px;
+    padding: 10px;
+    border-radius: 10px;
+}
 
+.upcoming .upcoming1 a {
 
+    text-decoration: none;
+}
 
+.upcoming .upcoming1 a h4:hover {
+    cursor: pointer;
+    font-size: 20px;
+    color: rgb(5, 5, 5);
+    background-color: white;
 
+}
 
-    /* -----------head section end---  */
-    .upcoming {
+.upcoming .upcoming1 a h4 {
+    color: black;
+    background-color: rgb(252, 5, 5);
+    margin: 30px;
+    padding: 10px;
+    border-radius: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
-        height: 240px;
-        width: auto;
-        text-align: center;
-        padding: 20px;
-        background-color:
-            #161616;
-        margin-left: 5%;
-        border-radius: 20px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.section2 {
+    margin-top: 5%;
+}
 
-    }
+.head2 {
+    display: flex;
+    justify-content: space-between;
 
-    .upcoming .upcoming1 a h4 {
-        color: black;
-        margin: 30px;
-        padding: 10px;
-        border-radius: 10px;
-    }
+}
 
-    .upcoming .upcoming1 a {
+.timing {
+    display: flex;
+    justify-content: space-around;
+}
 
-        text-decoration: none;
-    }
+.time a {
+    text-align: left;
+}
 
-    .upcoming .upcoming1 a h4:hover {
-        cursor: pointer;
-        font-size: 20px;
-        color: rgb(5, 5, 5);
-        background-color: white;
+.img-info-head {
+    display: grid;
+    grid-template-columns: repeat(3, 3fr);
+    gap: 20px;
+    margin-right: 5%;
 
-    }
+}
 
-    .upcoming .upcoming1 a h4 {
-        color: black;
-        background-color: rgb(252, 5, 5);
-        margin: 30px;
-        padding: 10px;
-        border-radius: 10px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    }
+.img-info {
+    border: 1px solid rgb(219, 219, 219);
+    border-radius: 10px;
+}
 
-    .section2 {
-        margin-top: 5%;
-    }
+.img-info h3 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
+.img-info button,
+h3 {
+    margin-left: 15px;
+}
+
+.img-info a button {
+    margin-top: 10px;
+}
+
+.img-info a button:hover {
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 10px;
+
+}
+
+.timing .chat a {
+    margin-right: 70px;
+}
+
+.timing,
+.time .chat {
+    color: rgb(77, 4, 126);
+    margin-bottom: 10px;
+    margin-right: 40px;
+}
+
+/* ---------section2 device query--------  */
+@media only screen and (max-width:688px) {
     .head2 {
-        display: flex;
-        justify-content: space-between;
-
-    }
-
-    .timing {
-        display: flex;
-        justify-content: space-around;
-    }
-
-    .time a {
-        text-align: left;
-    }
-
-    .img-info-head {
         display: grid;
-        grid-template-columns: repeat(3, 3fr);
-        gap: 20px;
-        margin-right: 5%;
+        grid-template-columns: repeat(1, 1fr);
+    }
 
+    .upcoming {
+        justify-content: center;
+        align-items: center;
+        margin: 2% 5%;
+
+    }
+
+
+
+}
+
+@media only screen and (max-width:688px) {
+    .img-info-head {
+        grid-template-columns: repeat(1, 1fr);
+        margin: 0 auto;
     }
 
     .img-info {
-        border: 1px solid rgb(219, 219, 219);
-        border-radius: 10px;
+
+        justify-content: center;
+        align-items: center;
     }
 
-    .img-info h3 {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    .timing {
+        margin: 0 auto;
     }
+}
 
-    .img-info button,
-    h3 {
-        margin-left: 15px;
-    }
 
-    .img-info a button {
-        margin-top: 10px;
-    }
 
-    .img-info a button:hover {
-        cursor: pointer;
-        font-size: 15px;
-        font-weight: 10px;
+/* -----------section2 end---- */
+footer {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 100%;
+    background-color: rgb(31, 29, 29);
+    margin: 20px 0;
+}
 
-    }
+.footer-info {
 
-    .timing .chat a {
-        margin-right: 70px;
-    }
+    padding-top: 100px;
+}
 
-    .timing,
-    .time .chat {
-        color: rgb(77, 4, 126);
-        margin-bottom: 10px;
-        margin-right: 40px;
-    }
+.footer-info h1 {
+    font-size: 40px;
+    color: white;
+    padding-bottom: 20px;
+    text-align: center;
 
-    /* -----------section2 end---- */
-    footer {
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        width: 100%;
-        background-color: rgb(31, 29, 29);
-        margin: 20px 0;
-    }
+}
 
+.footer-info hr {
+    width: 80%;
+}
+
+.footer-hr hr {
+    color: #535353;
+    opacity: 40%;
+}
+
+.footer-info-menu {
+    padding-bottom: 100px;
+    padding-top: 20px;
+    text-align: center;
+}
+
+.footer-info-menu .pointer:hover {
+    cursor: pointer;
+    font-size: 18px;
+    color: aqua;
+}
+
+.footer-info-menu a {
+    color: white;
+    text-decoration: none;
+    margin: 10px;
+}
+
+/* -----footer media quary------  */
+@media only screen and (max-width:688px) {
     .footer-info {
-
-        padding-top: 100px;
+        width: 100%;
     }
 
-    .footer-info h1 {
-        font-size: 40px;
-        color: white;
-        padding-bottom: 20px;
-        text-align: center;
-
-    }
-
-    .footer-info hr {
-        width: 80%;
-    }
-
-    .footer-hr hr {
-        color: #535353;
-        opacity: 40%;
+    .footer-hr {
+        width: 90%;
+        margin: 0 auto;
     }
 
     .footer-info-menu {
-        padding-bottom: 100px;
-        padding-top: 20px;
-        text-align: center;
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+
     }
-
-    .footer-info-menu .pointer:hover {
-        cursor: pointer;
-        font-size: 18px;
-        color: aqua;
-    }
-
-
-
-    .footer-info-menu a {
-        color: white;
-        text-decoration: none;
-        margin: 10px;
-    }
+}
